force-app/main/default/objects/ContactUs_Contact__c/ContactUs_Contact__c.object-meta.xml
<CustomObject>
    <label>ContactUsContact</label>
    <nameField>
        <displayFormat>CN-{000000}</displayFormat>
        <label>ContactUsContact</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ContactUsContacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>