force-app/main/default/objects/ContactUs_Contact__c/fields/Address_test__c.field-meta.xml
<CustomField>
    <fullName>Address_test__c</fullName>
    <label>Address test</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>