force-app/main/default/objects/ContactUs_Contact__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access Solutions (Customer Contact Center)</fullName>
            </value>
            <value>
                <fullName>Account Executive</fullName>
            </value>
            <value>
                <fullName>FedACH and Check Services</fullName>
            </value>
            <value>
                <fullName>FedCash Services</fullName>
            </value>
            <value>
                <fullName>Account Services</fullName>
            </value>
            <value>
                <fullName>Central Bank</fullName>
            </value>
            <value>
                <fullName>Discount Window</fullName>
            </value>
            <value>
                <fullName>Fedwire Funds and Fedwire Securities</fullName>
            </value>
            <value>
                <fullName>National Settlement Service</fullName>
            </value>
            <value>
                <fullName>Treasury Services</fullName>
            </value>
            <value>
                <fullName>Local Federal Reserve Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>