force-app/main/default/objects/ContactUs_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact:</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>