force-app/main/default/objects/ContactUs_Contact__c/fields/Credit_Risk_Management__c.field-meta.xml
<CustomField>
    <fullName>Credit_Risk_Management__c</fullName>
    <label>Credit Risk Management</label>
    <type>Url</type>
</CustomField>