force-app/main/default/objects/ContactUs_Contact__c/fields/Customer_Support_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Support_Contact__c</fullName>
    <label>Customer Support Contact</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>