force-app/main/default/objects/ContactUs_Contact__c/fields/Customer_Support_for_Image_enabled_Savin__c.field-meta.xml
<CustomField>
    <fullName>Customer_Support_for_Image_enabled_Savin__c</fullName>
    <label>Customer Support for Image-enabled Savin</label>
    <type>Phone</type>
</CustomField>