force-app/main/default/objects/ContactUs_Contact__c/fields/Excess_Balance_Account__c.field-meta.xml
<CustomField>
    <fullName>Excess_Balance_Account__c</fullName>
    <label>Excess Balance Account</label>
    <type>Url</type>
</CustomField>