force-app/main/default/objects/ContactUs_Contact__c/fields/Fax_or_email_paper_requests_to__c.field-meta.xml
<CustomField>
    <fullName>Fax_or_email_paper_requests_to__c</fullName>
    <label>Fax or email paper requests to:</label>
    <type>TextArea</type>
</CustomField>