force-app/main/default/objects/ContactUs_Contact__c/fields/FedLine_Web__c.field-meta.xml
<CustomField>
    <fullName>FedLine_Web__c</fullName>
    <label>FedLine Web</label>
    <type>Phone</type>
</CustomField>