force-app/main/default/objects/ContactUs_Contact__c/fields/For_Account_Balance_and_Capital_Stock__c.field-meta.xml
<CustomField>
    <fullName>For_Account_Balance_and_Capital_Stock__c</fullName>
    <label>For Account Balance and Capital Stock</label>
    <type>Phone</type>
</CustomField>