force-app/main/default/objects/ContactUs_Contact__c/fields/No_Label__c.field-meta.xml
<CustomField>
    <fullName>No_Label__c</fullName>
    <label>No Label</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>