force-app/main/default/objects/ContactUs_Contact__c/fields/Ordering_Forms_and_Supplies__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Forms_and_Supplies__c</fullName>
    <label>Ordering Forms and Supplies</label>
    <type>Email</type>
</CustomField>