force-app/main/default/objects/ContactUs_Contact__c/fields/Paper_Check_Adjust_and_Sup_Doc_Pro_Site__c.field-meta.xml
<CustomField>
    <fullName>Paper_Check_Adjust_and_Sup_Doc_Pro_Site__c</fullName>
    <label>Paper Check Adjust and Sup Doc Pro Site</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>