force-app/main/default/objects/ContactUs_Contact__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <label>Primary:</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>