force-app/main/default/objects/ContactUs_Contact__c/fields/Processing_Site_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Processing_Site_Addresses__c</fullName>
    <label>Processing Site Addresses</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>