force-app/main/default/objects/ContactUs_Contact__c/fields/Reporting_Central__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Central__c</fullName>
    <label>Reporting Central</label>
    <type>Url</type>
</CustomField>