force-app/main/default/objects/ContactUs_Contact__c/fields/Reserves_Central__c.field-meta.xml
<CustomField>
    <fullName>Reserves_Central__c</fullName>
    <label>Reserves Central</label>
    <type>Url</type>
</CustomField>