force-app/main/default/objects/ContactUs_Contact__c/fields/Return_completed_original_document_s_to__c.field-meta.xml
<CustomField>
    <fullName>Return_completed_original_document_s_to__c</fullName>
    <label>Return completed original document(s) to</label>
    <type>Email</type>
</CustomField>