force-app/main/default/objects/ContactUs_Contact__c/fields/Savings_Bond_Customer_Support_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Savings_Bond_Customer_Support_Contacts__c</fullName>
    <label>Savings Bond Customer Support Contacts</label>
    <type>Phone</type>
</CustomField>