force-app/main/default/objects/ContactUs_Contact__c/fields/Secondary__c.field-meta.xml
<CustomField>
    <fullName>Secondary__c</fullName>
    <label>Secondary:</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>