force-app/main/default/objects/ContactUs_Contact__c/fields/Separately_Sorted_Savings_Bonds_Processi__c.field-meta.xml
<CustomField>
    <fullName>Separately_Sorted_Savings_Bonds_Processi__c</fullName>
    <label>Separately Sorted Savings Bonds Processi</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>