force-app/main/default/objects/ContactUs_Contact__c/fields/Service_Setup_Email__c.field-meta.xml
<CustomField>
    <fullName>Service_Setup_Email__c</fullName>
    <label>Service Setup Email</label>
    <type>Email</type>
</CustomField>