force-app/main/default/objects/ContactUs_Contact__c/fields/Sub_Category_Multi_Select__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category_Multi_Select__c</fullName>
    <label>Sub Category Multi Select</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FedLine Services Set-up</fullName>
            </value>
            <value>
                <fullName>FedLine Services Technical Support</fullName>
            </value>
            <value>
                <fullName>FedACH and Check Services Customer Support</fullName>
            </value>
            <value>
                <fullName>Paper Check Processing</fullName>
            </value>
            <value>
                <fullName>Paper Check Adjustment and Documentation</fullName>
            </value>
            <value>
                <fullName>Foreign Check</fullName>
            </value>
            <value>
                <fullName>Canadian Check</fullName>
            </value>
            <value>
                <fullName>Image-enabled Savings Bonds</fullName>
            </value>
            <value>
                <fullName>Account Services Customer Support</fullName>
            </value>
            <value>
                <fullName>Account Open Coordinators</fullName>
            </value>
            <value>
                <fullName>Board Resolution/Official Authorization List</fullName>
            </value>
            <value>
                <fullName>Account Confirmation Request</fullName>
            </value>
            <value>
                <fullName>Billing Operations Site and Service Change Information</fullName>
            </value>
            <value>
                <fullName>Mergers</fullName>
            </value>
            <value>
                <fullName>Capital Stocks</fullName>
            </value>
            <value>
                <fullName>General Inquiries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>