force-app/main/default/objects/ContactUs_Contact__c/fields/TCMM_Operations_Support__c.field-meta.xml
<CustomField>
    <fullName>TCMM_Operations_Support__c</fullName>
    <label>TCMM Operations Support</label>
    <type>Phone</type>
</CustomField>