force-app/main/default/objects/ContactUs_Contact__c/fields/Term_Deposit_Facility__c.field-meta.xml
<CustomField>
    <fullName>Term_Deposit_Facility__c</fullName>
    <label>Term Deposit Facility</label>
    <type>Url</type>
</CustomField>