force-app/main/default/objects/ContactUs_Contact__c/fields/Web_site__c.field-meta.xml
<CustomField>
    <fullName>Web_site__c</fullName>
    <label>Web site</label>
    <type>Url</type>
</CustomField>