force-app/main/default/objects/ContactUs_Contact__c/recordTypes/District_Contact.recordType-meta.xml
<RecordType>
    <fullName>District_Contact</fullName>
    <active>true</active>
    <label>District Contact</label>
</RecordType>