force-app/main/default/objects/ContactUs_Contact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>Status__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Service_Setup_Email__c</columns>
    <columns>Processing_Site_Addresses__c</columns>
    <columns>Fax__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>